--- a/overlays/systems/fluentbit/application.yaml
+++ b/overlays/systems/fluentbit/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kafka
+  name: fluent-bit
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -13,29 +13,28 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: kafka
+    namespace: fluent-bit
   project: default
   source:
-    chart: kafka
-    repoURL: https://charts.bitnami.com/bitnami
-    targetRevision: 32.3.5
+    chart: fluent-bit
+    repoURL: https://fluent.github.io/helm-charts
+    targetRevision: 0.50.0
     helm:
       valuesObject:
-        overrideConfiguration:
-          offsets.topic.replication.factor: 1
-          transaction.state.log.replication.factor: 1
-          transaction.state.log.min.isr: 1
-        sasl:
-          existingSecret: "kafka-secret"
-        controller:
-          replicaCount: 1
-          resources:
-            requests:
-              cpu: 100m
-              memory: 1024Mi
-          persistence:
-            storageClass: "longhorn"
-            size: 3Gi
+        existingConfigMap: "fluent-bit-config"
+        # Mount writable paths used by your config
+        extraVolumes:
+          - name: fluentbit-state
+            emptyDir: {}
+          - name: fluentbit-buffers
+            emptyDir:
+              sizeLimit: 1Gi
+
+        extraVolumeMounts:
+          - name: fluentbit-state
+            mountPath: /fluent-bit/state
+          - name: fluentbit-buffers
+            mountPath: /buffers
   syncPolicy:
     automated:
       prune: true
