--- a/overlays/systems/grafana/application.yaml
+++ b/overlays/systems/grafana/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kafka
+  name: grafana
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -13,29 +13,25 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: kafka
+    namespace: monitoring
   project: default
   source:
-    chart: kafka
-    repoURL: https://charts.bitnami.com/bitnami
-    targetRevision: 32.3.5
+    chart: grafana
+    repoURL: https://grafana.github.io/helm-charts
+    targetRevision: 9.3.2
     helm:
       valuesObject:
-        overrideConfiguration:
-          offsets.topic.replication.factor: 1
-          transaction.state.log.replication.factor: 1
-          transaction.state.log.min.isr: 1
-        sasl:
-          existingSecret: "kafka-secret"
-        controller:
-          replicaCount: 1
-          resources:
-            requests:
-              cpu: 100m
-              memory: 1024Mi
-          persistence:
-            storageClass: "longhorn"
-            size: 3Gi
+        service:
+          type: NodePort
+          nodePort: "31115"
+        persistence:
+          enabled: true
+          size: 2Gi
+          storageClassName: "longhorn" 
+        resource:
+          requests:
+            cpu: "100m"
+            memory: "500Mi"
   syncPolicy:
     automated:
       prune: true
