--- a/overlays/systems/kowl/application.yaml
+++ b/overlays/systems/kowl/application.yaml
@@ -31,6 +31,11 @@ spec:
                 username: user1
         secret:
           existingSecret: kowl-secret
+        service:
+            type: NodePort
+            nodePort: 32767
+            port: 80
+            targetPort: http
   syncPolicy:
     automated:
       prune: true
