--- a/overlays/systems/kafka/application.yaml
+++ b/overlays/systems/kafka/application.yaml
@@ -25,6 +25,8 @@ spec:
           offsets.topic.replication.factor: 1
           transaction.state.log.replication.factor: 1
           transaction.state.log.min.isr: 1
+          log.retention.ms: "259200000"
+          log.roll.ms: "86400000"
         sasl:
           existingSecret: "kafka-secret"
         controller:
