--- a/overlays/systems/kustomization.yaml
+++ b/overlays/systems/kustomization.yaml
@@ -2,12 +2,29 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-# - argocd-image-updater
+- argocd-image-updater
 - descheduler
 # - event-exporter
-- prometheus
+# - prometheus
+# - kube-prometheus-stack
 - reloader
 - vault
 - vault-secrets-operator
 - redis
 - redis-insight
+- service-accounts
+- vault-auth
+- secrets
+# - istio
+- kafka
+# - kowl
+# - elasticsearch
+# - kibana
+- fluentbit
+- grafana
+- loki
+- promtail
+- alloy
+- minio
+- tempo
+- kafbat-ui
