--- a/overlays/systems/loki/application.yaml
+++ b/overlays/systems/loki/application.yaml
@@ -22,7 +22,12 @@ spec:
     helm:
       valuesObject:
         global:
+          extraArgs:
+            - "-config.expand-env=true"
           dnsService: rke2-coredns-rke2-coredns
+          extraEnvFrom:
+            - secretRef:
+                name: loki-minio-secret
         loki:
           auth_enabled: false
           commonConfig:
@@ -42,14 +47,29 @@ spec:
             allow_structured_metadata: true
             volume_enabled: true
             retention_period: 24h
-
+          compactor:
+            working_directory: /tmp/loki/retention
+            retention_enabled: true
+            retention_delete_delay: 2h
+            delete_request_store: filesystem
           ruler:
             enable_api: true
+          storage:
+            bucketNames:
+              chunks: ea-logs
+              ruler: ea-logs
+              admin: ea-logs
+            tpye: s3
+            s3:
+              endpoint: "http://minio.minio:9000"
+              region: "us-east-1" 
+              s3ForcePathStyle: true
+              insecure: true
+              accessKeyId: ${MINIO_ACCESS_KEY}
+              secretAccessKey: ${MINIO_SECRET_KEY}
 
         minio:
-          enabled: true
-          persistence:
-            size: 1Gi
+          enabled: false
 
         deploymentMode: SingleBinary
 
@@ -57,7 +77,7 @@ spec:
           replicas: 1
           persistence:
             storageClassName: "longhorn"
-            size: 5Gi
+            size: 3Gi
 
         # Zero out replica counts of other deployment modes
         backend:
