--- a/overlays/systems/vault/application.yaml
+++ b/overlays/systems/vault/application.yaml
@@ -64,7 +64,7 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
     syncOptions:
       - ServerSideApply=true
       - CreateNamespace=true
