--- a/overlays/systems/loki/application.yaml
+++ b/overlays/systems/loki/application.yaml
@@ -21,6 +21,8 @@ spec:
     targetRevision: 6.36.1
     helm:
       valuesObject:
+        lokiCanary:
+          enabled: false
         global:
           extraArgs:
             - "-config.expand-env=true"
