--- a/overlays/systems/vault-secrets-operator/application.yaml
+++ b/overlays/systems/vault-secrets-operator/application.yaml
@@ -23,7 +23,7 @@ spec:
       valuesObject:
         defaultVaultConnection:
           enabled: true
-          address: "http://vault.vault.svc.cluster.local:8200"
+          address: "http://dv-vau-hs.dwl.local:8200"
           skipTLSVerify: false
         hooks:
           upgradeCRDs:
