--- a/overlays/systems/loki/application.yaml
+++ b/overlays/systems/loki/application.yaml
@@ -22,13 +22,13 @@ spec:
     helm:
       valuesObject:
         global:
+          dnsService: coredns
+        loki:
           extraArgs:
             - "-config.expand-env=true"
-          dnsService: rke2-coredns-rke2-coredns
           extraEnvFrom:
             - secretRef:
-                name: loki-minio-secret
-        loki:
+                name: loki-huawei-s3-secret
           auth_enabled: false
           commonConfig:
             replication_factor: 1
@@ -46,7 +46,7 @@ spec:
           limits_config:
             allow_structured_metadata: true
             volume_enabled: true
-            retention_period: 24h
+            retention_period: 7d
           compactor:
             working_directory: /tmp/loki/retention
             retention_enabled: true
@@ -56,17 +56,16 @@ spec:
             enable_api: true
           storage:
             bucketNames:
-              chunks: ea-logs
-              ruler: ea-logs
-              admin: ea-logs
+              chunks: dev-wallet-tempo-log
+              ruler: dev-wallet-tempo-log
             tpye: s3
             s3:
-              endpoint: "http://minio.minio:9000"
-              region: "us-east-1" 
-              s3ForcePathStyle: true # set to false when use obs huawei
-              insecure: true
-              accessKeyId: ${MINIO_ACCESS_KEY}
-              secretAccessKey: ${MINIO_SECRET_KEY}
+              endpoint: "https://obs.ap-southeast-2.myhuaweicloud.com"
+              region: "ap-southeast-2" 
+              s3ForcePathStyle: false
+              insecure: false
+              accessKeyId: ${HUAWEI_S3_ACCESS_KEY}
+              secretAccessKey: ${HUAWEI_S3_SECRET_KEY}
 
         minio:
           enabled: false
@@ -76,8 +75,21 @@ spec:
         singleBinary:
           replicas: 1
           persistence:
-            storageClassName: "longhorn"
+            # enabled: false
+            storageClassName: "csi-disk"
             size: 3Gi
+
+        chunksCache:
+          resources:
+            requests:
+              memory: 512Mi
+              cpu: 100m
+
+        resultsCache:
+          resources:
+            requests:
+              memory: 512Mi
+              cpu: 100m
 
         # Zero out replica counts of other deployment modes
         backend:
