--- a/overlays/systems/loki/secret.yaml
+++ b/overlays/systems/loki/secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: loki-minio-secret
+  name: loki-huawei-s3-secret
   namespace: monitoring
 type: Opaque
 stringData:
-  MINIO_ACCESS_KEY: admin
-  MINIO_SECRET_KEY: # Password
+  HUAWEI_S3_ACCESS_KEY: admin
+  HUAWEI_S3_SECRET_KEY: # Password
