--- a/overlays/systems/redis-insight/overlay/kustomization.yaml
+++ b/overlays/systems/redis-insight/overlay/kustomization.yaml
@@ -3,8 +3,10 @@ kind: Kustomization
 
 resources:
 - ../../../../base/systems/redis-insight
+- ingress.yaml
 
 patchesStrategicMerge:
+- deployment.yaml
 - service.yaml
 
 images:
